playground/notas_tests/invalid/new-02.hulk
type Base() {}
type Mid() inherits Base() {}
type Leaf(x:Number) inherits Mid() {}
print(new Leaf("bad"));
